--- a/settings.yaml
+++ b/settings.yaml
@@ -1,4 +1,4 @@
-default_profile: github-marl-2h-qmix-5agent
+default_profile: github-llm-2h
 default_output_path: ./webtest_output/result
 default_model_path: ./webtest_model
 default_session: test_session
@@ -7,14 +7,53 @@ default_continuous_restart_threshold: 5
 default_enable_screen_shot: True
 
 profiles:
+  github-llm-2h:
+    agent_num: 1
+    record_interval: 180   # 记录output_data里每个json文件的时间间隔
+    alive_time: 7200
+    page_load_timeout: 30   # 超时重启的时间间隔
+    browser_path: D:\projects\webtest-python\driver\chrome-win\chrome.exe
+    browser_data_path: D:\projects\webtest-python\chrome_data
+    driver_path: D:\projects\webtest-python\driver\chrome-win\chromedriver.exe
+    resources_path: ./resources
+    entry_url: https://github.com
+    domains:
+      - www.github.com
+      - github.com
+    browser_arguments:
+      - --window-size=1280,1000
+    #      - --headless
+    action_detector:   # 可执行动作的种类，例如点击事件、输入事件、选择事件
+      module: action.detector.combination_detector
+      class: CombinationDetector
+      detectors:
+        - module: action.detector.click_action_detector
+          class: ClickActionDetector
+        - module: action.detector.random_input_action_detector
+          class: RandomInputActionDetector
+        - module: action.detector.random_select_action_detector
+          class: RandomSelectActionDetector
+    state:    # 定义状态的种类，例如url+可执行动作的集合
+      module: state.impl.action_set_with_execution_times_state
+      class: ActionSetWithExecutionTimesState
+    agent:
+      module: agent.impl.my_agent
+      class: my_agent
+      params:
+        agent_type: LLM
+        alpha: 1
+        gamma: 0.5
+        epsilon: 0.5
+        initial_q_value: 10.0
+
   github-marl-2h-marg-dql-5agent:
     agent_num: 5
     record_interval: 180
     alive_time: 7200
     page_load_timeout: 30
-    browser_path: D:\webTest\chrome-win/chrome.exe
-    browser_data_path: D:\webTest\chrome_data
-    driver_path: D:\webTest\chromedriver.exe
+    browser_path: D:\projects\webtest-python\driver\chrome-win\chrome.exe
+    browser_data_path: D:\projects\webtest-python\chrome_data
+    driver_path: D:\projects\webtest-python\driver\chrome-win\chromedriver.exe
     resources_path: ./resources
     entry_url: https://github.com
     domains:
